--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,7 @@
 //@import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: "font-family: Nunito Sans";
+$fontFamily: nunito;
 $fontSize: rem(16); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
