--- a/src/scss/fonts/fonts.scss
+++ b/src/scss/fonts/fonts.scss
@@ -1,36 +1,29 @@
 @font-face {
-	font-family: nunito;
+	font-family: NunitoSans;
 	font-display: swap;
-	src: url("../fonts/nunito-sans-bold.woff2") format("woff2"), url("../fonts/nunito-sans-bold.woff") format("woff");
+	src: url("../fonts/NunitoSans-ExtraBold.woff2") format("woff2"), url("../fonts/NunitoSans-ExtraBold.woff") format("woff");
+	font-weight: 800;
+	font-style: normal;
+}
+@font-face {
+	font-family: NunitoSans;
+	font-display: swap;
+	src: url("../fonts/NunitoSans-Bold.woff2") format("woff2"), url("../fonts/NunitoSans-Bold.woff") format("woff");
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: NunitoSans;
+	font-display: swap;
+	src: url("../fonts/NunitoSans-Regular.woff2") format("woff2"), url("../fonts/NunitoSans-Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: nunito;
+	font-family: NunitoSans;
 	font-display: swap;
-	src: url("../fonts/nunito-sans-black.woff2") format("woff2"), url("../fonts/nunito-sans-black.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: nunito;
-	font-display: swap;
-	src: url("../fonts/nunito-sans-extrabold.woff2") format("woff2"), url("../fonts/nunito-sans-extrabold.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: roboto;
-	font-display: swap;
-	src: url("../fonts/roboto-light.woff2") format("woff2"), url("../fonts/roboto-light.woff") format("woff");
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: nunito;
-	font-display: swap;
-	src: url("../fonts/nunito-sans-regular.woff2") format("woff2"), url("../fonts/nunito-sans-regular.woff") format("woff");
-	font-weight: 400;
+	src: url("../fonts/NunitoSans-Black.woff2") format("woff2"), url("../fonts/NunitoSans-Black.woff") format("woff");
+	font-weight: 900;
 	font-style: normal;
 }
 @font-face {
@@ -45,5 +38,12 @@
 	font-display: swap;
 	src: url("../fonts/roboto-regular.woff2") format("woff2"), url("../fonts/roboto-regular.woff") format("woff");
 	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: roboto;
+	font-display: swap;
+	src: url("../fonts/roboto-light.woff2") format("woff2"), url("../fonts/roboto-light.woff") format("woff");
+	font-weight: 300;
 	font-style: normal;
 }
