--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,14 +7,17 @@
 //&display=swap - добавить при подключении через плагин
 
 // Подключить если есть локальные файлы шрифтов
-@import "fonts/fonts";
+// @import "fonts/fonts";
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,400;1,500&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Neonderthaw&family=Nunito+Sans:wght@300;400;600;700;800&family=Poppins:wght@400;600&family=Roboto:wght@300;400;500&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,400;1,500&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Neonderthaw&family=Nunito+Sans:wght@600;700;800&family=Poppins:wght@400;600&family=Roboto:wght@300;400;500;700;900&display=swap");
 
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
 //@import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: nunito;
+$fontFamily: "Nunito Sans";
 $fontSize: rem(16); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
