--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,24 +3,81 @@
   // .header__container
   &__container {
     padding: 40px 80px;
+
+    @media (max-width: $pc) {
+      padding: 20px 40px;
+    }
+    @media (max-width: $tablet) {
+      padding: 0;
+    }
   }
+}
+.menu-open .nav {
+  transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
 }
 .nav {
   display: flex;
   justify-content: space-between;
   padding: 15px;
   align-items: center;
+  gap: 80px;
+  @media (max-width: 1440px) {
+    gap: 40px;
+  }
+  @media (max-width: $pc) {
+    padding: 0;
+  }
+  @media (max-width: $tablet) {
+    padding: 40px 0 60px;
+    max-width: initial;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow-y: scroll;
+    height: 100%;
+    width: 100vw;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background: #ffffff;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    -webkit-transition: transform 0.5s ease;
+    -moz-transition: transform 0.5s ease;
+    -ms-transition: transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
+    z-index: 10;
+    top: 42px;
+  }
   // .nav__list
   &__list {
     display: flex;
     align-items: center;
-    gap: 60px;
     justify-content: space-between;
+    gap: 15px;
+    flex: 1 1 auto;
+    @media (max-width: $tablet) {
+      flex-direction: column;
+      max-height: 500px;
+      padding: 30px;
+      gap: 40px;
+    }
   }
   // .nav__item-wrap
   &__item-wrap {
     display: flex;
     flex-direction: column;
+    @media (max-width: $mobile) {
+      align-items: center;
+    }
   }
   // .nav__link
   &__link {
@@ -35,6 +92,12 @@
         opacity: 0.9;
       }
     }
+    @media (max-width: $tablet) {
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 18px;
+      color: #272674;
+    }
   }
   // .nav__contacts
   &__contacts {
@@ -42,6 +105,10 @@
     justify-content: center;
     align-items: center;
     gap: 36px;
+    @media (max-width: $mobile) {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
   // .nav__wrap-tel
   &__wrap-tel {
@@ -80,58 +147,70 @@
   // .nav__mobile
   &__mobile {
     display: none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    z-index: 11;
+    width: 100vw;
+    position: fixed;
+    padding: 15px;
+    left: 0;
+    @media (max-width: $tablet) {
+      display: flex;
+    }
   }
 }
-.logo {
+.logos {
+  @media (max-width: $tablet) {
+    display: none;
+  }
 }
 
 //====================================================================================================
 //Burger
 
 .icon-menu {
-  display: none;
-  @media (max-width: $mobile) {
-    display: block;
-    position: relative;
-    width: rem(30);
-    height: rem(18);
-    cursor: pointer;
-    z-index: 5;
-    span,
+  display: block;
+  position: relative;
+  width: rem(30);
+  height: rem(18);
+  cursor: pointer;
+  z-index: 5;
+  span,
+  &::before,
+  &::after {
+    content: "";
+    transition: all 0.3s ease 0s;
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: rem(2);
+    background-color: #000;
+  }
+  &::before {
+    top: 0;
+  }
+  &::after {
+    bottom: 0;
+  }
+  span {
+    top: calc(50% - rem(1));
+  }
+  .menu-open & {
+    span {
+      width: 0;
+    }
     &::before,
     &::after {
-      content: "";
-      transition: all 0.3s ease 0s;
-      right: 0;
-      position: absolute;
-      width: 100%;
-      height: rem(2);
-      background-color: #000;
     }
     &::before {
-      top: 0;
+      top: calc(50% - rem(1));
+      transform: rotate(-45deg);
     }
     &::after {
-      bottom: 0;
-    }
-    span {
-      top: calc(50% - rem(1));
-    }
-    .menu-open & {
-      span {
-        width: 0;
-      }
-      &::before,
-      &::after {
-      }
-      &::before {
-        top: calc(50% - rem(1));
-        transform: rotate(-45deg);
-      }
-      &::after {
-        bottom: calc(50% - rem(1));
-        transform: rotate(45deg);
-      }
+      bottom: calc(50% - rem(1));
+      transform: rotate(45deg);
     }
   }
 }
