--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,9 +3,11 @@
   // .header__container
   &__container {
     padding: 40px 80px;
-
     @media (max-width: $pc) {
       padding: 20px 40px;
+    }
+    @media (max-width: 1000px) {
+      padding: 20px 30px;
     }
     @media (max-width: $tablet) {
       padding: 0;
@@ -22,14 +24,14 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+
   align-items: center;
   gap: 80px;
   @media (max-width: 1440px) {
     gap: 40px;
   }
   @media (max-width: $pc) {
-    padding: 0;
+    gap: 15px;
   }
   @media (max-width: $tablet) {
     padding: 40px 0 60px;
@@ -64,6 +66,9 @@
     justify-content: space-between;
     gap: 15px;
     flex: 1 1 auto;
+    @media (max-width: $pc) {
+      justify-content: space-around;
+    }
     @media (max-width: $tablet) {
       flex-direction: column;
       max-height: 500px;
@@ -105,6 +110,9 @@
     justify-content: center;
     align-items: center;
     gap: 36px;
+    @media (max-width: $pc) {
+      gap: 15px;
+    }
     @media (max-width: $mobile) {
       flex-direction: column;
       gap: 20px;
@@ -156,8 +164,21 @@
     position: fixed;
     padding: 15px;
     left: 0;
+    &__logo {
+      position: relative;
+      z-index: 12;
+    }
     @media (max-width: $tablet) {
       display: flex;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 10;
+        left: 0;
+      }
     }
   }
 }
@@ -176,7 +197,7 @@
   width: rem(30);
   height: rem(18);
   cursor: pointer;
-  z-index: 5;
+  z-index: 12;
   span,
   &::before,
   &::after {
