--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -601,7 +601,7 @@ h2 {
 .qualities {
   &__title {
     color: #ffffff;
-    padding: 165px 0 68px;
+    padding: 30px 0 40px;
     @media all and (max-width: 600px) {
       padding: 161px 0 54px;
     }
@@ -1246,18 +1246,54 @@ input::placeholder {
     border-radius: 42px;
     min-height: 245px;
     height: 100%;
+    cursor: pointer;
+
     @media all and (max-width: 1020px) {
       min-height: 100px;
     }
+
+    & h3 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: all 0.8s ease 0s;
+    }
+    & p {
+      padding: 0 15px;
+      position: absolute;
+      transform: translate(0, -50%);
+      top: 50%;
+      transition: all 0.5s ease 0s;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+      text-align: center;
+      color: #ffffff;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+    &.open-info {
+      & h3 {
+        opacity: 0;
+        visibility: hidden;
+      }
+      & p {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
   }
   &__wrap__subtitle {
+    pointer-events: none;
     @include text(36px, 800, 49px, #ffffff);
     text-align: center;
     max-width: 322px;
     width: 100%;
     position: relative;
     border-radius: 42px;
-    margin: 74px 8px;
     &::before {
       position: absolute;
       content: "";
@@ -1708,8 +1744,9 @@ input::placeholder {
   @media all and (max-width: 950px) {
     display: block;
     background-image: url(@img/blue-wave.svg);
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
   }
 }
 
