--- a/src/scss/libs/swiper.scss
+++ b/src/scss/libs/swiper.scss
@@ -238,6 +238,9 @@
   @media (max-width: 991px) {
     left: 43%;
   }
+  @media (max-width: 568px) {
+    left: 36%;
+  }
 }
 .swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
@@ -249,6 +252,9 @@
   left: auto;
   @media (max-width: 991px) {
     right: 43%;
+  }
+  @media (max-width: 568px){
+     right: 36%; 
   }
 }
 .swiper-button-next:after,
