--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -90,6 +90,7 @@ h2 {
 }
 
 .certificates {
+  padding: 0 15px;
   &__wrapper_left {
     max-width: 496px;
     width: 100%;
@@ -143,11 +144,14 @@ h2 {
     border-radius: 42px;
     color: #121212;
     width: 100%;
+    @media (max-width: $mobile) {
+      max-width: unset;
+    }
   }
   &__wrapper_left {
     padding: 56px 20px 54px 94px;
     @media all and (max-width: 1100px) {
-      padding: 20px 20px 51px;
+      padding: 20px;
     }
   }
   &__wrapper_right {
@@ -956,8 +960,10 @@ input::placeholder {
     background-size: 100%;
   }
   @media all and (max-width: 950px) {
-    background-image: url(@img/long-waves.svg);
-    background-size: 100% 100%;
+    // background-image: url(@img/long-waves.svg);
+    // background-size: 100% 100%;
+    background-image: unset;
+    background: linear-gradient(180deg, #292a64 0%, #2d3074 100%);
   }
 }
 
@@ -982,7 +988,7 @@ input::placeholder {
 }
 .reviews {
   &__title {
-    padding: 64px 0 36px;
+    padding: 80px 0 38px;
     color: #2d3074;
   }
   &__wrapper {
@@ -1247,9 +1253,8 @@ input::placeholder {
     min-height: 245px;
     height: 100%;
     cursor: pointer;
-
     @media all and (max-width: 1020px) {
-      min-height: 100px;
+      min-height: 150px;
     }
 
     & h3 {
@@ -1260,7 +1265,7 @@ input::placeholder {
       transition: all 0.8s ease 0s;
     }
     & p {
-      padding: 0 15px;
+      padding: 15px;
       position: absolute;
       transform: translate(0, -50%);
       top: 50%;
@@ -1312,10 +1317,6 @@ input::placeholder {
     }
     @media all and (max-width: 1200px) {
       font-size: 24px;
-    }
-    @media all and (max-width: 1020px) {
-      margin: 25px 10px 50px;
-      font-size: 18px;
     }
   }
   &__wrap_round__img {
@@ -1592,8 +1593,9 @@ input::placeholder {
     padding-left: 22px;
     position: relative;
     @media all and (max-width: 950px) {
-      max-width: 360px;
+      width: 190px;
       background: #272674;
+      margin-bottom: 40px;
     }
   }
   &__form__text-mobile {
@@ -1698,7 +1700,6 @@ input::placeholder {
 
 .service {
   &__title {
-    padding-top: 140px;
     max-width: 596px;
     width: 100%;
     margin: 0 auto;
@@ -1733,20 +1734,33 @@ input::placeholder {
     display: flex;
     justify-content: space-around;
     margin-top: 31px;
-    padding-bottom: 94px;
+    padding-bottom: 20px;
     @media all and (max-width: 900px) {
       flex-wrap: wrap;
     }
   }
 }
 .wave_backg {
-  background-image: none;
   @media all and (max-width: 950px) {
     display: block;
-    background-image: url(@img/blue-wave.svg);
+    background: linear-gradient(180deg, #292a64 0%, #2d3074 100%);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &::before {
+      content: "";
+      position: relative;
+      background-image: url(@img/wave-one-top.png);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 30px;
+    }
   }
 }
 
