--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -11,7 +11,6 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
-  
 }
 
 /* Sections
@@ -169,7 +168,8 @@ textarea {
   margin: 0; /* 2 */
 }
 
-button, li {
+button,
+li {
   cursor: pointer;
 }
 /**
@@ -360,7 +360,7 @@ h2,
 h3,
 h4,
 li {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
 }
 li {
   list-style-type: none;
@@ -389,6 +389,7 @@ body {
   }
 }
 
+
 .container_second {
   max-width: 1360px;
   width: 100%;
@@ -404,26 +405,24 @@ button:hover {
   opacity: 0.9;
 }
 
-
 @media screen and (max-width: 667px) {
   body {
-      overflow-x: hidden !important;
+    overflow-x: hidden !important;
   }
   .container {
-      max-width: 100% !important;
-      overflow-x: hidden !important;
-      
+    max-width: 100% !important;
+    overflow-x: hidden !important;
   }
 }
 input {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
 }
 label {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
 }
 
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  }
+}
