--- a/src/assets/scss/sections/_certificates.scss
+++ b/src/assets/scss/sections/_certificates.scss
@@ -16,6 +16,7 @@
     display: flex;
   }
   &__title {
+    max-width: 270px;
     text-align: left;
     color: #ffffff;
     margin-bottom: 20px;
