--- a/src/assets/scss/sections/_nav.scss
+++ b/src/assets/scss/sections/_nav.scss
@@ -129,6 +129,7 @@
   }
   // .nav__span
   &__span {
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
