--- a/src/assets/scss/sections/_main.scss
+++ b/src/assets/scss/sections/_main.scss
@@ -96,6 +96,9 @@ body.lock {
     @media (max-width: 1110px) {
       padding-left: 70px;
     }
+    @media (max-width: 1000px) {
+      padding-left: 0px;
+    }
     display: flex;
     justify-content: center;
     @media all and (max-width: 980px) {
@@ -113,6 +116,7 @@ body.lock {
     width: 206px;
     height: 50px;
     padding-left: 22px;
+    padding-top: 4px;
     position: relative;
     background: #262a66;
     &:hover {
