--- a/src/assets/scss/sections/_order.scss
+++ b/src/assets/scss/sections/_order.scss
@@ -5,10 +5,19 @@
     color: #ffffff;
     padding: 226px 0 36px;
     @media all and (max-width: 900px) {
-      padding: 169px 0 26px;
+      padding: 169px 0 2px;
+      max-width: 450px;
+      margin: 0 auto;
+    }
+    @media all and (max-width: 681px) {
+      padding: 199px 0 2px;
+      max-width: 250px;
+      margin: 0 auto;
     }
     @media all and (max-width: 450px) {
       padding-bottom: 26px;
+      max-width: 250px;
+      margin: 0 auto;
     }
   }
   &__form__text {
