--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,6 +25,7 @@
 @import './../scss/sections/qualities';
 @import './../scss/sections/certificates';
 @import './../scss/sections/footer';
+@import './../scss/sections/_wave';
 
 @import './../scss/library/_slick';
 @import './../scss/library/_slick-theme';
