--- a/src/assets/scss/sections/_certificates.scss
+++ b/src/assets/scss/sections/_certificates.scss
@@ -2,10 +2,11 @@
 
 .certificates {
   &__wrapper_left {
-    max-width: 496px;
+    margin: 0 0 0 74px;
     width: 100%;
     @media all and (max-width: 1100px) {
       max-width: 700px;
+      margin: 0 30px;
     }
   }
 
@@ -20,6 +21,15 @@
     text-align: left;
     color: #ffffff;
     margin-bottom: 20px;
+    @include text(36px, 800, 49px, #FFFFFF);
+    max-width: 509px;
+    width: 100%;
+    @media all and (max-width: 600px) {
+      @include text(24px, 800, 36px, #FFFFFF);
+    }
+    @media all and (max-width: 450px) {
+      @include text(24px, 700, 32px, #FFFFFF);
+    }
   }
   &__wrapper {
     background: #55b2f3;
@@ -40,7 +50,7 @@
     align-items: center;
     justify-content: center;
     @media all and (max-width: 1100px) {
-      margin-top: 40px;
+      margin-top: 94px;
     }
   }
   &__block__img {
@@ -55,10 +65,14 @@
   &__text {
     @include text(18px, 400, 25px, #ffffff);
     margin-bottom: 29px;
+    @media all and (max-width: 450px) {
+      @include text(16px, 400, 22px, #FFFFFF);
+      margin-bottom: 41px;
+    }
   }
   &__btn {
-    @media (max-width: 549px) {
-      max-width: unset;
+    @media all and (max-width: 1100px) {
+      margin: 0 auto;
     }
     display: flex;
     justify-content: center;
