--- a/src/assets/scss/sections/_partners.scss
+++ b/src/assets/scss/sections/_partners.scss
@@ -21,9 +21,14 @@
     @media all and (max-width: 560px) {
       width: 240px;
     }
+    @media all and (max-width: 450px) {
+      max-width: 200px;
+    }
     @media all and (max-width: 400px) {
-      max-width: 240px;
-      width: 100%;
+      max-width: 160px;
+    }
+    @media all and (max-width: 360px) {
+      max-width: 150px;
     }
   }
   &__wrap__images {
