--- a/src/assets/scss/sections/_request.scss
+++ b/src/assets/scss/sections/_request.scss
@@ -199,103 +199,154 @@ input::placeholder {
   font-family: "Nunito Sans";
 }
 
-@media all and (-webkit-min-device-pixel-ratio: 0) {
-  /*Всё, что вы сюда напишете, будет работать только с -webkit-*/
-  .wave_background {
-    background-image: url(./../images/wave.svg);
-    background-repeat: no-repeat;
+// @media all and (-webkit-min-device-pixel-ratio: 0) {
+//   /*Всё, что вы сюда напишете, будет работать только с -webkit-*/
+//   .wave_background {
+//     background-image: url(./../images/wave.svg);
+//     background-repeat: no-repeat;
 
-    background-size: 100% 100%;
-    background-size: 1440px 100%;
-    background-position-x: center;
-    @media all and (min-width: 1441px) {
-      background-size: 100% 100%;
-    }
-    @media all and (max-width: 950px) {
-      background-image: none;
-    }
-  }
-  .wave_background {
-    background-image: url(./../images/wave.svg);
-    background-repeat: no-repeat;
+//     background-size: 100% 100%;
+//     background-size: 1440px 100%;
+//     background-position-x: center;
+//     @media all and (min-width: 1441px) {
+//       background-size: 100% 100%;
+//     }
+//     @media all and (max-width: 950px) {
+//       background-image: none;
+//     }
+//   }
+//   .wave_background {
+//     background-image: url(./../images/wave.svg);
+//     background-repeat: no-repeat;
 
-    background-size: 100% 100%;
-    background-size: 1440px 100%;
-    background-position-x: center;
-    @media all and (min-width: 1441px) {
-      background-size: 100% 100%;
-    }
-    @media all and (max-width: 950px) {
-      background-image: none;
-    }
-  }
-  .wave__background_second {
-    background-image: url(./../images/wave.svg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    // background-size: 1440px 100%;
-    background-position-x: center;
-    @media all and (min-width: 1441px) {
-      background-size: 100% 100%;
-    }
-    @media all and (max-width: 950px) {
-      background-image: url(./../images/long-waves.svg);
-      background-size: 100% 100%;
-    }
-  }
-}
+//     background-size: 100% 100%;
+//     background-size: 1440px 100%;
+//     background-position-x: center;
+//     @media all and (min-width: 1441px) {
+//       background-size: 100% 100%;
+//     }
+//     @media all and (max-width: 950px) {
+//       background-image: none;
+//     }
+//   }
+//   .wave__background_second {
+//     background-image: url(./../images/wave.svg);
+//     background-repeat: no-repeat;
+//     background-size: 100% 100%;
+//     // background-size: 1440px 100%;
+//     background-position-x: center;
+//     @media all and (min-width: 1441px) {
+//       background-size: 100% 100%;
+//     }
+//     @media all and (max-width: 950px) {
+//       background-image: url(./../images/long-waves.svg);
+//       background-size: 100% 100%;
+//     }
+//   }
+// }
 
-.wave_background {
-  background-image: url(./../images/wave.svg);
-  background-repeat: no-repeat;
+// .wave_background {
+//   background-image: url(./../images/wave.svg);
+//   background-repeat: no-repeat;
 
-  background-size: 100% 100%;
-  background-size: 1440px 100%;
-  background-position-x: center;
-  @media all and (min-width: 1441px) {
-    background-size: 100% 100%;
-  }
-  @media all and (max-width: 950px) {
-    background-image: none;
-  }
-}
-.wave_background {
-  background-image: url(./../images/11111.png);
-  background-repeat: no-repeat;
-  // background-size: cover;
-  background-size: 100% 100%;
-  // background-size: 1440px 100%;
-  background-position-x: center;
-  @media all and (min-width: 1441px) {
-    // background-size: 100% 100%;
-  }
-  @media all and (max-width: 950px) {
-    background-image: none;
-  }
-}
-.wave__background_second {
-  background-image: url(./../images/11111.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  // background-size: cover;
-  background-size: 1440px 100%;
-  background-position-x: center;
-  background-position-y: center;
-  @media all and (min-width: 1441px) {
-    background-size: 100% 100%;
-    // background-size: cover;
-  }
-  @media all and (max-width: 950px) {
-    background-image: url(./../images/long-waves.svg);
-    background-size: 100% 100%;
-    // background-size: cover;
-  }
-}
-.wave__background_second-img {
-  object-fit: contain;
-  z-index: -1;
-  display: none;
-  box-sizing: border-box;
-  width: 100%;
-  max-width: 1400%;
-}
+//   background-size: 100% 100%;
+//   background-size: 1440px 100%;
+//   background-position-x: center;
+//   @media all and (min-width: 1441px) {
+//     background-size: 100% 100%;
+//   }
+//   @media all and (max-width: 950px) {
+//     background-image: none;
+//   }
+// }
+// .wave_background {
+//   z-index: -1;
+//   position: relative;
+//   width: 100vw;
+//   // background-image: url(./../images/11111.png);
+//   // background-repeat: no-repeat;
+//   // // background-size: cover;
+//   // background-size: 100% 100%;
+//   // // background-size: 1440px 100%;
+//   // background-position-x: center;
+//   // @media all and (min-width: 1441px) {
+//   //   // background-size: 100% 100%;
+//   // }
+//   // @media all and (max-width: 950px) {
+//   //   background-image: none;
+//   // }
+// }
+// .wave__background_second {
+//   z-index: -1;
+//   position: relative;
+//   width: 100vw;
+//   // background-image: url(./../images/11111.png);
+//   // background-repeat: no-repeat;
+//   // background-size: 100% 100%;
+//   // // background-size: cover;
+//   // background-size: 1440px 100%;
+//   // background-position-x: center;
+//   // background-position-y: center;
+//   // @media all and (min-width: 1441px) {
+//   //   background-size: 100% 100%;
+//     // background-size: cover;
+//   }
+//   @media all and (max-width: 950px) {
+//     &::before {
+//       content: "";
+//         position: absolute;
+//         background: url(./../images/walves-long.svg) no-repeat center;
+//         width: 105%x;
+//         height: 100%;
+//         top: 0;
+//         left: 0;
+//     }
+//   }
+// //   @media screen and (-webkit-min-device-pixel-ratio:0) {
+   
+// // }
+
+// }
+// .wave__background_second-img {
+//   object-fit: contain;
+//   z-index: -1;
+//   display: none;
+//   box-sizing: border-box;
+//   width: 100%;
+//   max-width: 1400%;
+//   width: 100vw;
+// }
+// .wave__backg {
+//   width: 100vw;
+//   position: relative;
+// }
+// .wave__background_second::before {
+//   z-index: -1;
+//   content: "";
+//     position: absolute;
+//     background: url(./../images/walves-long.png) no-repeat center;
+//     width: 100%;
+//     height: 100%;
+//     top: 0;
+//     left: 0;
+//     @media all and (min-width: 950px) {
+//       background: url(./../images/11111.png);
+//     }
+// }
+// .wave__backg::before {
+  
+//   background: url(./../images/long-waves.svg) no-repeat center;
+//   z-index: -1;
+//   @media all and (min-width: 950px) {
+//     content: "";
+//       position: absolute;
+//       background: url(./../images/blue-wave.svg) no-repeat center;
+//       width: 100%;
+//       height: 100%;
+//       // top: 0;
+//       // left: 0;
+//       // background-position: 100% 100%
+      
+//   }
+  
+// }
