--- a/src/assets/scss/sections/_wave.scss
+++ b/src/assets/scss/sections/_wave.scss
@@ -14,7 +14,7 @@
     background-image: none;
     @media all and (max-width: 950px) {
       display: block;
-      background-image: url(./../images/blue-wave.svg);
+      background-image: url(./../images/blue-wave.png);
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
@@ -22,7 +22,8 @@
   .wave__background_second {
     background-image: url(./../images/11111.png);
     background-repeat: no-repeat;
-    background-size: 1440px 100%;
+    background-size: 100% 100%;
+    // background-size: 1440px 100%;
     background-position-x: center;
         @media all and (max-width: 950px) {
           background-image: url(./../images/long-waves.png);
