--- a/src/assets/scss/sections/_certificates.scss
+++ b/src/assets/scss/sections/_certificates.scss
@@ -26,7 +26,7 @@
     border-radius: 42px;
     display: flex;
     justify-content: space-between;
-    margin-top: 107px;
+    margin: 107px 15px 0;
     @media all and (max-width: 1100px) {
       flex-direction: column-reverse;
       align-items: center;
