--- a/src/assets/scss/sections/_discounts.scss
+++ b/src/assets/scss/sections/_discounts.scss
@@ -39,6 +39,7 @@
       background-size: 54%;
     }
     
+    
   }
   &__wrapper:nth-child(2) {
     background: #55B2F3;
@@ -60,13 +61,15 @@
     }
     @media all and (max-width: 1250px) {
       background-size: 49%;
+      margin-right: 22px;
+      justify-content: flex-end;
     }
     
   }
   &__wrapper:nth-child(3) {
     background: #2271C5;
     background-image: url(./../images/discounts/b3.svg);
-    background-size: 95%;
+    background-size: 100%;
     background-repeat: no-repeat;
     // background-size: 90% 100%;
     // background-position: right bottom;
@@ -91,6 +94,13 @@
   &__wrap__text {
     color: #FFFFFF;
   }
+  &__wrap__subtitle {
+    @include text(28px, 900, 38px, #FFFFFF);
+    font-family: 'Nunito Sans';
+    @media all and (max-width: 620px) {
+      @include text(22px, 800, 30px, #FFFFFF);
+    }
+  }
   &__wrap {
     width: 100%;
   }
@@ -101,23 +111,27 @@
   }
   &__wrap_first {
     max-width: 150px;
+    margin-right: 28px;
     @media all and (max-width: 1240px) {
       max-width: 250px;
-      padding: 5px;
+      padding: 10px;
+      margin-right: 10px;
     }
     @media all and (max-width: 430px) {
       max-width: 160px;
     }
+    
   }
   &__wrap_second {
     max-width: 220px;
     margin-left: 82px;
     @media all and (max-width: 1240px) {
-      max-width: 250px;
+      max-width: 230px;
       padding: 5px;
+      margin-right: 12px;
     }
     @media all and (max-width: 430px) {
-      max-width: 128px;
+      max-width: 145px;
     }
   }
   &__wrap_third {
@@ -129,12 +143,19 @@
     }
     @media all and (max-width: 430px) {
       max-width: 128px;
+      margin-left: 24px;
     }
   }
   &__wrap__subtitle {
     padding-top: 27px;
     @media all and (max-width: 430px) {
       padding-top: 20px;
+    }
+    @media all and (max-width: 430px) {
+      @include text(20px, 900, 28px, #FFFFFF);
+    }
+    @media all and (max-width: 420px) {
+      padding-top: 10px;
     }
   }
   &__wrap__button {
@@ -147,11 +168,17 @@
     @media all and (max-width: 430px) {
       margin-bottom: 19px;
     }
+    @media all and (max-width: 430px) {
+      margin-bottom: 10px;
+    }
   }
   &__wrap__text:nth-child(3) {
     margin: 30px 0 28px;
+    @media all and (max-width: 620px) {
+      margin: 27px 0 21px;
+    }
     @media all and (max-width: 430px) {
-      margin: 25px 0 21px;
+      margin: 15px 0 15px;
     }
   }
   &__blocks {
@@ -162,6 +189,11 @@
       flex-direction: column;
       align-items: center;
       margin: 6px 10px 30px;
+    }
+  }
+  &__blocks > .discounts__wrap__text {
+    @media all and (max-width: 430px) {
+      max-width: 100px;
     }
   }
   &__text_bottom {
