--- a/src/assets/scss/components/_radio.scss
+++ b/src/assets/scss/components/_radio.scss
@@ -26,7 +26,7 @@ label {
   span {
     display: flex;
     align-items: center;
-    padding: 0.375em 0.75em 0.375em 0.375em;
+    // padding: 0.375em 0.75em 0.375em 0.375em;
     border-radius: 99em; // or something higher...
     transition: 0.25s ease;
     &:hover {
